@@ -80,9 +80,6 @@ def dependencies(DependencyHandler deps) {
     deps.modImplementation(deps.include("com.jamieswhiteshirt:reach-entity-attributes:${project.reach_entity_attributes_version}"))
     deps.modImplementation(deps.include("io.github.tropheusj:milk-lib:${project.milk_lib_version}"))
     deps.implementation(deps.include("com.google.code.findbugs:jsr305:${project.jsr305_version}"))
-
-    // we only need this present, don't need to do anything with it
-    deps.include("me.luligabi:NoIndium:${project.no_indium_version}")
 }
 
 // initial project setup
@@ -111,6 +108,7 @@ def compat(DependencyHandler deps) {
     deps.modCompileOnly("com.terraformersmc:modmenu:${project.modmenu_version}")
     deps.modCompileOnly("dev.emi:trinkets:${project.trinkets_version}") { exclude(group: "com.terraformersmc") }
     deps.modCompileOnly("vazkii.botania:Botania:${project.botania_version}") { transitive = false }
+    deps.modCompileOnly("maven.modrinth:sodium:${project.sodium_version}")
 }
 
 // setup the three recipe viewer mods
