@@ -58,6 +58,8 @@ emi_version = 0.5.3+1.18.2
 jei_version = 10.2.1.283
 # https://modrinth.com/mod/botania
 botania_version = 1.18.2-435-FABRIC
+# https://modrinth.com/mod/sodium
+sodium_version = mc1.18.2-0.4.1
 
 # What recipe viewer to use ('emi', 'rei', or 'jei'. if you change it, don't push it)
 recipe_viewer = emi
